--- a/src/app/pages/education/education.component.html
+++ b/src/app/pages/education/education.component.html
@@ -95,18 +95,18 @@
     </div>
     <hr>
     <div class="ae-grid__item item-lg-8 item-lg--offset-2">
-        <h4 class="ae-u-bolder">IBM Advanced Career Education Programming Fundamentals Certificate</h4>
+        <h4 class="ae-u-bolder">e-business Application Developer Program - Programming Fundamentals</h4>
         <p>
-            <b>Universidad Nacional Experimental De La Fuerza Armada, (UNEFA)</b>
+            <b>IBM</b>
             <br>
             Julio 2007, 80 Horas            
         </p>
     </div>
     <hr>
     <div class="ae-grid__item item-lg-8 item-lg--offset-2">
-        <h4 class="ae-u-bolder">IBM Advanced Career Education IT and Networking Fundamentals Certificate</h4>
+        <h4 class="ae-u-bolder">e-business Application Developer Program - IT and Networking Fundamentals</h4>
         <p>
-            <b>Universidad Nacional Experimental De La Fuerza Armada, (UNEFA)</b>          
+            <b>IBM</b>          
             <br>
             Marzo 2007, 80 Horas
            
