--- a/src/app/pages/technologies/technologies.component.html
+++ b/src/app/pages/technologies/technologies.component.html
@@ -254,6 +254,36 @@
             </div>               
         </a>
 
+        <a style="background-image: url('../assets/img/technologies/firebase.jpg');" class="rk-item rk-item--flex rk-size-4 rk-tosize-3 rk-square ">
+            <div class="item-meta">
+                <h2>
+                    <i class=""></i>
+                    Firebase
+                </h2>
+                <p>Platform</p>
+            </div>               
+        </a>
+
+        <a style="background-image: url('../assets/img/technologies/google-cloud.jpg');" class="rk-item rk-item--flex rk-size-4 rk-tosize-3 rk-square ">
+            <div class="item-meta">
+                <h2>
+                    <i class=""></i>
+                    Google Cloud
+                </h2>
+                <p>Platform</p>
+            </div>               
+        </a>
+
+        <a style="background-image: url('../assets/img/technologies/aws.jpg');" class="rk-item rk-item--flex rk-size-4 rk-tosize-3 rk-square ">
+            <div class="item-meta">
+                <h2>
+                    <i class=""></i>
+                   Amazon Web Service
+                </h2>
+                <p>Platform</p>
+            </div>               
+        </a>
+
         <a style="background-image: url('../assets/img/technologies/powerbi.jpg');" class="rk-item rk-item--flex rk-size-4 rk-tosize-3 rk-square ">
             <div class="item-meta">
                 <h2>
