--- a/src/app/pages/experience/experience.component.html
+++ b/src/app/pages/experience/experience.component.html
@@ -7,8 +7,41 @@
     <br>
     <div class="ae-grid__item item-lg-8 item-sm--center au-xs-ta-center au-lg-ta-left">
         <h2 class="rk-portfolio-inner-title ">Experiencia Laboral</h2>
-    </div>      
-   
+    </div> 
+    
+    <div class="ae-grid__item item-lg-8 item-lg--offset-2">
+        <p>
+            <b>Profesional Independiente - Desarrollador full stack</b>
+            <br>
+            Diciembre 2021 / Actualidad - Palencia, Castilla y León, España
+        </p>
+        <p style="text-align: justify;">
+            <b>Tareas realizadas:</b> Análisis y diseño de sistemas, desarrollo web, desarrollo de aplicaciones móviles y desarrollo de microservicios, API Rest. Análisis y diseño de base de datos. Desarrollo Front-End usando Angular, Ionic, React Native, TypeScript, JavaScript, Bootstrap, JQuery, Css, HTML5. Desarrollo Back-End con NodeJS, ExpressJS, Python, Flask. Bases de Datos: SQL Server 2008/2012/2016, MySQL, PostgreSQL, MongoDB.
+        </p>
+    </div>
+    <hr>
+    <div class="ae-grid__item item-lg-8 item-lg--offset-2">
+        <p>
+            <b>Stefanini LATAM - Desarrollador de front-end</b>
+            <br>
+            Septiembre 2021 / Diciembre 2021 - Lima, Peru 
+        </p>
+        <p style="text-align: justify;">
+            <b>Tareas realizadas:</b> Desarrollo web y aplicaciones móviles. Desarrollo Front-End usando Angular, Ionic, AngularJS, TypeScript, JavaScript, Bootstrap, JQuery, Css, HTML5.
+        </p>
+    </div>
+    <hr>
+    <div class="ae-grid__item item-lg-8 item-lg--offset-2">
+        <p>
+            <b>MDP CONSULTING S.A.C - Desarrollador Full Stack</b>
+            <br>
+            Junio 2021 / Octubre 2021 - Lima, Peru 
+        </p>
+        <p style="text-align: justify;">
+            <b>Tareas realizadas:</b> Desarrollo web y aplicaciones móviles. Desarrollo Front-End usando Angular, React Native, TypeScript, JavaScript, Bootstrap, Css, HTML5. Bases de Datos: SQL Server 2016.
+        </p>
+    </div>
+    <hr>
     <div class="ae-grid__item item-lg-8 item-lg--offset-2">
         <p>
             <b>SUPERVAN S.A.C. - Desarrollador Full Stack</b>
