--- a/src/app/pages/education/education.component.html
+++ b/src/app/pages/education/education.component.html
@@ -1,157 +1,184 @@
 <div class="ae-container-fluid ae-container-fluid--inner rk-main">
-    <!-- <header class="rk-portfolio-cover  item-inside-1" style="background-image: url('../assets/img/education.jpg')">
+  <!-- <header class="rk-portfolio-cover  item-inside-1" style="background-image: url('../assets/img/education.jpg')">
         <div class="item-inside__meta">
             <h1 class="ae-u-bolder rk-portfolio-title ">Estudios y Formaciones</h1>
         </div>
     </header>         -->
-    <br>
-    <div class="ae-grid__item item-lg-8 item-sm--center au-xs-ta-center au-lg-ta-left">
-        <h2 class="rk-portfolio-inner-title ">Estudios</h2>
-    </div>
+  <br />
+  <div
+    class="ae-grid__item item-lg-8 item-sm--center au-xs-ta-center au-lg-ta-left"
+  >
+    <h2 class="rk-portfolio-inner-title">Estudios</h2>
+  </div>
 
-    <div class="ae-grid__item item-lg-8 item-lg--offset-2">
-        <h4 class="ae-u-bolder">Ingeniero de Sistemas</h4>
-        <p>
-            <b>Universidad Nacional Experimental de la Fuerza Armada, (UNEFA)</b>
-            <br>
-            Año 2009, Carabobo, Venezuela
-        </p>
-    </div>
-    <hr>
-    <div class="ae-grid__item item-lg-8 item-lg--offset-2">
-        <h4 class="ae-u-bolder">Secundaria : Bachiller En Ciencias</h4>
-        <p>
-            <b>Unidad Educativa Maria Auxiliadora</b>            
-            <br>
-            Año 2004, Carabobo, Venezuela
-        </p>
-    </div>
-
-    <div class="ae-grid__item item-lg-8 item-sm--center au-xs-ta-center au-lg-ta-left">
-        <h2 class="rk-portfolio-inner-title ">Formaciones Adicionales e Interes</h2>
-    </div>
-    <div class="ae-grid__item item-lg-8 item-lg--offset-2">
-        <h4 class="ae-u-bolder">Metodología Agíl - SCRUM</h4>
-        <p>
-            <b>InGenio Learning</b>
-            <br>
-            Marzo 2021, 24 Horas            
-        </p>
-    </div>
-    <hr>
-    <div class="ae-grid__item item-lg-8 item-lg--offset-2">
-        <h4 class="ae-u-bolder">ITIL V4  - Fundamentos</h4>
-        <p>
-            <b>InGenio Learning</b>
-            <br>
-            Febrero 2021, 32 Horas            
-        </p>
-    </div>
-    <hr>
-    <div class="ae-grid__item item-lg-8 item-lg--offset-2">
-        <h4 class="ae-u-bolder">PMP Fundamentos 6.0.</h4>
-        <p>            
-            <b>InGenio Learning</b>
-            <br>
-            Diciembre 2020, 40 Horas
-        </p>
-    </div>
-    <hr>
-    <div class="ae-grid__item item-lg-8 item-lg--offset-2">
-        <h4 class="ae-u-bolder">Ingles Instrumental</h4>
-        <p>
-            <b>Universidad Nacional Experimental De La Fuerza Armada, (UNEFA)</b>            
-            <br>
-            Abril 2014, 80 Horas
-            
-        </p>
-    </div>
-    <hr>
-    <div class="ae-grid__item item-lg-8 item-lg--offset-2">
-        <h4 class="ae-u-bolder">II Jornada de Logística Global (En calidad de organidador y participante)</h4>
-        <p>
-            <b>Universidad Nacional Experimental De La Fuerza Armada, (UNEFA)</b>
-            <br>
-            Abril 2014, 8 Horas            
-        </p>
-    </div>
-    <hr>
-    <div class="ae-grid__item item-lg-8 item-lg--offset-2">
-        <h4 class="ae-u-bolder">Querying Microsoft SQL Server 2012</h4>
-        <p >            
-            <b>SOFTRAIN</b>
-            <br>
-            Enero 2013, 40 Horas            
-        </p>
-    </div>
-    <hr>
-    <div class="ae-grid__item item-lg-8 item-lg--offset-2">
-        <h4 class="ae-u-bolder">II Expo Ciencia y Tecnología en el Área de Ingeniería de Sistemas</h4>
-        <p >            
-            <b>Universidad Nacional Experimental De La Fuerza Armada, (UNEFA)</b>
-            <br>
-            Marzo 2008, 8 Horas
-        </p>
-    </div>
-    <hr>
-    <div class="ae-grid__item item-lg-8 item-lg--offset-2">
-        <h4 class="ae-u-bolder">e-business Application Developer Program - Programming Fundamentals</h4>
-        <p>
-            <b>IBM</b>
-            <br>
-            Julio 2007, 80 Horas            
-        </p>
-    </div>
-    <hr>
-    <div class="ae-grid__item item-lg-8 item-lg--offset-2">
-        <h4 class="ae-u-bolder">e-business Application Developer Program - IT and Networking Fundamentals</h4>
-        <p>
-            <b>IBM</b>          
-            <br>
-            Marzo 2007, 80 Horas
-           
-        </p>
-    </div>
-    <hr>
-    <div class="ae-grid__item item-lg-8 item-lg--offset-2">
-        <h4 class="ae-u-bolder">Macromedia Flash 8 y Clases Virtuales</h4>
-        <p>
-            <b>Universidad Nacional Experimental De La Fuerza Armada, (UNEFA)</b>
-            <br>
-            Noviembre 2006, 16 Horas           
-        </p>
-    </div>
-    <hr>
-    <div class="ae-grid__item item-lg-8 item-lg--offset-2">
-        <h4 class="ae-u-bolder">VII Congreso de Estudiantes del IEEE de Venezuela</h4>
-        <p>           
-            <b>Universidad Nacional Experimental Politécnico Antonio Jose De Sucre (UNEXPO)</b>
-            <br>
-            Mayo 2006, 24 Horas
-        </p>
-    </div>
-    <hr>
-    <div class="ae-grid__item item-lg-8 item-lg--offset-2">
-        <h4 class="ae-u-bolder">II jornada de ELECTRICOM 2006</h4>
-        <p>
-            <b>Universidad Nacional Experimental De La Fuerza Armada, (UNEFA)</b>
-            <br>
-            Mayo 2006, 16 Horas            
-        </p>
-    </div>
-    <hr>
-    <div class="ae-grid__item item-lg-8 item-lg--offset-2">
-        <h4 class="ae-u-bolder">Visual Basic 6.0</h4>
-        <p>
-            <b>Universidad Nacional Experimental De La Fuerza Armada, (UNEFA)</b>
-            <br>            
-            Abril 2006, 24 Horas
-        </p>
-    </div>
-    <p class="au-flex au-pt-4 group-buttons"><a routerLink="/experience" class="au-mt-4 arrow-button arrow-button--right arrow-button--out">Ver Experiencia Laboral<span class="arrow-cont">
-        <svg>
-          <use xlink:href="assets/img/symbols.svg#arrow"></use>
-        </svg></span></a>
+  <div class="ae-grid__item item-lg-8 item-lg--offset-2">
+    <h4 class="ae-u-bolder">Ingeniero de Sistemas</h4>
+    <p>
+      <b>Universidad Nacional Experimental de la Fuerza Armada, (UNEFA)</b>
+      <br />
+      Año 2009, Carabobo, Venezuela
     </p>
-</div>
+  </div>
+  <hr />
+  <div class="ae-grid__item item-lg-8 item-lg--offset-2">
+    <h4 class="ae-u-bolder">Secundaria : Bachiller En Ciencias</h4>
+    <p>
+      <b>Unidad Educativa Maria Auxiliadora</b>
+      <br />
+      Año 2004, Carabobo, Venezuela
+    </p>
+  </div>
 
+  <div
+    class="ae-grid__item item-lg-8 item-sm--center au-xs-ta-center au-lg-ta-left"
+  >
+    <h2 class="rk-portfolio-inner-title">Formaciones Adicionales e Interes</h2>
+  </div>
+  <div class="ae-grid__item item-lg-8 item-lg--offset-2">
+    <h4 class="ae-u-bolder">PYTHON</h4>
+    <p>
+      <b>InGenio Learning</b>
+      <br />
+      Mayo 2022, 32 Horas
+    </p>
+  </div>
+  <hr />
+  <div class="ae-grid__item item-lg-8 item-lg--offset-2">
+    <h4 class="ae-u-bolder">Metodología Agíl - SCRUM</h4>
+    <p>
+      <b>InGenio Learning</b>
+      <br />
+      Marzo 2021, 24 Horas
+    </p>
+  </div>
+  <hr />
+  <div class="ae-grid__item item-lg-8 item-lg--offset-2">
+    <h4 class="ae-u-bolder">ITIL V4 - Fundamentos</h4>
+    <p>
+      <b>InGenio Learning</b>
+      <br />
+      Febrero 2021, 32 Horas
+    </p>
+  </div>
+  <hr />
+  <div class="ae-grid__item item-lg-8 item-lg--offset-2">
+    <h4 class="ae-u-bolder">PMP Fundamentos 6.0.</h4>
+    <p>
+      <b>InGenio Learning</b>
+      <br />
+      Diciembre 2020, 40 Horas
+    </p>
+  </div>
+  <hr />
+  <div class="ae-grid__item item-lg-8 item-lg--offset-2">
+    <h4 class="ae-u-bolder">Ingles Instrumental</h4>
+    <p>
+      <b>Universidad Nacional Experimental De La Fuerza Armada, (UNEFA)</b>
+      <br />
+      Abril 2014, 80 Horas
+    </p>
+  </div>
+  <hr />
+  <div class="ae-grid__item item-lg-8 item-lg--offset-2">
+    <h4 class="ae-u-bolder">
+      II Jornada de Logística Global (En calidad de organidador y participante)
+    </h4>
+    <p>
+      <b>Universidad Nacional Experimental De La Fuerza Armada, (UNEFA)</b>
+      <br />
+      Abril 2014, 8 Horas
+    </p>
+  </div>
+  <hr />
+  <div class="ae-grid__item item-lg-8 item-lg--offset-2">
+    <h4 class="ae-u-bolder">Querying Microsoft SQL Server 2012</h4>
+    <p>
+      <b>SOFTRAIN</b>
+      <br />
+      Enero 2013, 40 Horas
+    </p>
+  </div>
+  <hr />
+  <div class="ae-grid__item item-lg-8 item-lg--offset-2">
+    <h4 class="ae-u-bolder">
+      II Expo Ciencia y Tecnología en el Área de Ingeniería de Sistemas
+    </h4>
+    <p>
+      <b>Universidad Nacional Experimental De La Fuerza Armada, (UNEFA)</b>
+      <br />
+      Marzo 2008, 8 Horas
+    </p>
+  </div>
+  <hr />
+  <div class="ae-grid__item item-lg-8 item-lg--offset-2">
+    <h4 class="ae-u-bolder">
+      e-business Application Developer Program - Programming Fundamentals
+    </h4>
+    <p>
+      <b>IBM</b>
+      <br />
+      Julio 2007, 80 Horas
+    </p>
+  </div>
+  <hr />
+  <div class="ae-grid__item item-lg-8 item-lg--offset-2">
+    <h4 class="ae-u-bolder">
+      e-business Application Developer Program - IT and Networking Fundamentals
+    </h4>
+    <p>
+      <b>IBM</b>
+      <br />
+      Marzo 2007, 80 Horas
+    </p>
+  </div>
+  <hr />
+  <div class="ae-grid__item item-lg-8 item-lg--offset-2">
+    <h4 class="ae-u-bolder">Macromedia Flash 8 y Clases Virtuales</h4>
+    <p>
+      <b>Universidad Nacional Experimental De La Fuerza Armada, (UNEFA)</b>
+      <br />
+      Noviembre 2006, 16 Horas
+    </p>
+  </div>
+  <hr />
+  <div class="ae-grid__item item-lg-8 item-lg--offset-2">
+    <h4 class="ae-u-bolder">
+      VII Congreso de Estudiantes del IEEE de Venezuela
+    </h4>
+    <p>
+      <b
+        >Universidad Nacional Experimental Politécnico Antonio Jose De Sucre
+        (UNEXPO)</b
+      >
+      <br />
+      Mayo 2006, 24 Horas
+    </p>
+  </div>
+  <hr />
+  <div class="ae-grid__item item-lg-8 item-lg--offset-2">
+    <h4 class="ae-u-bolder">II jornada de ELECTRICOM 2006</h4>
+    <p>
+      <b>Universidad Nacional Experimental De La Fuerza Armada, (UNEFA)</b>
+      <br />
+      Mayo 2006, 16 Horas
+    </p>
+  </div>
+  <hr />
+  <div class="ae-grid__item item-lg-8 item-lg--offset-2">
+    <h4 class="ae-u-bolder">Visual Basic 6.0</h4>
+    <p>
+      <b>Universidad Nacional Experimental De La Fuerza Armada, (UNEFA)</b>
+      <br />
+      Abril 2006, 24 Horas
+    </p>
+  </div>
+  <p class="au-flex au-pt-4 group-buttons">
+    <a
+      routerLink="/experience"
+      class="au-mt-4 arrow-button arrow-button--right arrow-button--out"
+      >Ver Experiencia Laboral<span class="arrow-cont">
+        <svg>
+          <use xlink:href="assets/img/symbols.svg#arrow"></use></svg></span
+    ></a>
+  </p>
+</div>
