update info experience

--- a/src/app/pages/experience/experience.component.html
+++ b/src/app/pages/experience/experience.component.html
@@ -62,7 +62,7 @@
     <p style="text-align: justify">
       <b>Tareas realizadas:</b> Desarrollo web y aplicaciones móviles.
       Desarrollo Front-End usando Angular, React Native, TypeScript, JavaScript,
-      Bootstrap, Css, HTML5. Bases de Datos: SQL Server 2016.
+      Bootstrap, Css, HTML5. Bases de datos: SQL Server 2016.
     </p>
   </div>
   <hr />
@@ -70,7 +70,7 @@
     <p>
       <b>SUPERVAN S.A.C. - Desarrollador Full Stack</b>
       <br />
-      Mayo 2020 / Actualidad - Lima, Peru
+      Mayo 2020 / Mayo 2021 - Lima, Peru
     </p>
     <p style="text-align: justify">
       <b>Tareas realizadas:</b> Análisis y diseño de sistemas, desarrollo web,
@@ -78,29 +78,23 @@
       microservicios. Análisis y diseño de base de datos. Desarrollo Front-End
       usando Angular, Ionic, TypeScript, JavaScript, Bootstrap, JQuery, Ajax,
       Css, HTML, Visual Fox Pro 9. Desarrollo Back-End con NodeJS, Express.js,
-      PHP. Bases de Datos: SQL Server 2008/2012, MongoDB.
+      PHP. Bases de datos: SQL Server 2008/2012, MySQL, MongoDB.
     </p>
   </div>
   <hr />
   <div class="ae-grid__item item-lg-8 item-lg--offset-2">
     <p>
-      <b
-        >Corporación Cyber Power S.A.C. - Desarrollador Full Stack y Soporte
-        Técnico</b
-      >
+      <b>Corporación Cyber Power S.A.C. - Desarrollador Full Stack</b>
       <br />
-      Mayo 2018 / Marzo 2020 - Lima, Peru
+      Mayo 2018 / Mayo 2020 - Lima, Peru
     </p>
     <p style="text-align: justify">
       <b>Tareas realizadas:</b> Análisis y diseño de sistemas, desarrollo web,
       desarrollo de aplicaciones móviles y de escritorio, desarrollo de
-      microservicios. Análisis y diseño de base de datos. Soporte técnico
-      HelpDesk, administración de Active Directory, administración de correo
-      exchange, administración de servidores Windows, administración de
-      antivirus, administración de fortinet. Desarrollo Front-End usando
-      Angular, Ionic, TypeScript, JavaScript, Bootstrap, JQuery, Ajax, Css,
-      HTML, Visual Fox Pro 9. Desarrollo Back-End con NodeJS, Express.js, PHP.
-      Bases de Datos: SQL Server 2008/2012, MongoDB.
+      microservicios. Análisis y diseño de base de datos. Desarrollo Front-End
+      usando Angular, Ionic, TypeScript, JavaScript, Bootstrap, JQuery, Ajax,
+      Css, HTML5, Visual Fox Pro 9. Desarrollo Back-End con NodeJS, ExpressJS,
+      PHP. Bases de datos: SQL Server 2008/2012, MySQL, MongoDB.
     </p>
   </div>
   <hr />
@@ -116,7 +110,7 @@
       Análisis y diseño de base datos. Documentación técnica de sistemas.
       Soporte técnico en todos los Niveles. Desarrollo Front-End usando
       JavaScript, Bootstrap, JQuery, Ajax, Css, HTML, Visual Fox Pro 9.
-      Desarrollo Back-End con PHP. Bases de Datos: SQL Server 2005/2008/2012,
+      Desarrollo Back-End con PHP. Bases de datos: SQL Server 2005/2008/2012,
       PostgreSQL, MySQL.
     </p>
   </div>
