update cv, experience

--- a/src/app/pages/experience/experience.component.html
+++ b/src/app/pages/experience/experience.component.html
@@ -15,7 +15,7 @@
     <p>
       <b>IZERTIS - Desarrollador de front-end</b>
       <br />
-      Septiembre 2022 / Actualidad - Palencia, Castilla y León, España
+      Septiembre 2022 / Marzo 2023 - Madrid, España
     </p>
     <p style="text-align: justify">
       <b>Tareas realizadas:</b> Desarrollo web y aplicaciones móviles.
