update info bio and experiences

--- a/src/app/pages/experience/experience.component.html
+++ b/src/app/pages/experience/experience.component.html
@@ -13,7 +13,7 @@
 
   <div class="ae-grid__item item-lg-8 item-lg--offset-2">
     <p>
-      <b>IZERTIS - Desarrollador de front-end</b>
+      <b>Senior Desarrollador de frontEnd en IZERTIS</b>
       <br />
       Septiembre 2022 / Marzo 2023 - Madrid, España
     </p>
@@ -26,7 +26,7 @@
   <hr />
   <div class="ae-grid__item item-lg-8 item-lg--offset-2">
     <p>
-      <b>Profesional Independiente - Desarrollador full stack</b>
+      <b>Desarrollador Full Stack - Profesional Independiente</b>
       <br />
       Diciembre 2021 / Septiembre 2022 - Palencia, Castilla y León, España
     </p>
@@ -42,9 +42,9 @@
   <hr />
   <div class="ae-grid__item item-lg-8 item-lg--offset-2">
     <p>
-      <b>Stefanini LATAM - Desarrollador de front-end</b>
+      <b>Senior Desarrollador de frontEnd en Stefanini LATAM</b>
       <br />
-      Septiembre 2021 / Diciembre 2021 - Lima, Peru
+      Septiembre 2021 / Diciembre 2021 - Lima, Perú
     </p>
     <p style="text-align: justify">
       <b>Tareas realizadas:</b> Desarrollo web y aplicaciones móviles.
@@ -55,9 +55,9 @@
   <hr />
   <div class="ae-grid__item item-lg-8 item-lg--offset-2">
     <p>
-      <b>MDP CONSULTING S.A.C - Desarrollador Full Stack</b>
+      <b>Senior Desarrollador de frontEnd en MDP CONSULTING S.A.C</b>
       <br />
-      Junio 2021 / Octubre 2021 - Lima, Peru
+      Junio 2021 / Octubre 2021 - Lima, Perú
     </p>
     <p style="text-align: justify">
       <b>Tareas realizadas:</b> Desarrollo web y aplicaciones móviles.
@@ -68,9 +68,9 @@
   <hr />
   <div class="ae-grid__item item-lg-8 item-lg--offset-2">
     <p>
-      <b>SUPERVAN S.A.C. - Desarrollador Full Stack</b>
+      <b>Desarrollador Full Stack en SUPERVAN S.A.C.</b>
       <br />
-      Mayo 2020 / Mayo 2021 - Lima, Peru
+      Mayo 2020 / Mayo 2021 - Lima, Perú
     </p>
     <p style="text-align: justify">
       <b>Tareas realizadas:</b> Análisis y diseño de sistemas, desarrollo web,
@@ -84,7 +84,7 @@
   <hr />
   <div class="ae-grid__item item-lg-8 item-lg--offset-2">
     <p>
-      <b>Corporación Cyber Power S.A.C. - Desarrollador Full Stack</b>
+      <b>Desarrollador Full Stack en Corporación Cyber Power S.A.C.</b>
       <br />
       Mayo 2018 / Mayo 2020 - Lima, Peru
     </p>
@@ -100,7 +100,7 @@
   <hr />
   <div class="ae-grid__item item-lg-8 item-lg--offset-2">
     <p>
-      <b>Bolivariana de Puertos, S.A - Desarrollador Full Stack</b>
+      <b>Desarrollador Full Stack en Bolivariana de Puertos, S.A</b>
       <br />
       Diciembre 2009 / Marzo 2018 - Puerto Cabello, Venezuela
     </p>
@@ -118,11 +118,11 @@
   <div class="ae-grid__item item-lg-8 item-lg--offset-2">
     <p>
       <b
-        >Servicio Nacional Integrado de Administración Aduanera y Tributaria
-        (SENIAT) - Practicante</b
+        >Practicante en Servicio Nacional Integrado de Administración Aduanera y Tributaria
+        (SENIAT)</b
       >
       <br />
-      Enero / Abril 2009 - Puerto Cabello, Venezuela
+      Enero 2009 / Abril 2009 - Puerto Cabello, Venezuela
     </p>
     <p style="text-align: justify">
       <b>Tareas realizadas:</b> Apoyo a la unidad de informática, soporte
